--- a/style_2.css
+++ b/style_2.css
@@ -9,7 +9,6 @@ ul {
 }
 
 
-/* Apply a basic style */
 
 html {
     display: table;
@@ -26,12 +25,6 @@ body {
     background: -moz-linear-gradient(0deg, hsla(246, 60%, 20%, 1) 0%, hsla(227, 41%, 38%, 1) 49%, hsla(246, 60%, 20%, 1) 100%);
     background: -webkit-linear-gradient(0deg, hsla(246, 60%, 20%, 1) 0%, hsla(227, 41%, 38%, 1) 49%, hsla(246, 60%, 20%, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1A1451", endColorstr="#394A89", GradientType=1);
-    /*
-    background-image: url('background_1.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    */
 }
 
 header {
@@ -42,8 +35,21 @@ header {
     border-radius: 20px;
 }
 
+header img{
+    width: 50;
+    /* Makes the image responsive, adjusting to the parent's width */
+    height: auto;
+    /* Keeps the image's aspect ratio */
+    display: block;
+    border-radius: 5%;
+    margin-left: auto;
+  margin-right: auto;
+    
+}
+
 nav ul {
     list-style: none;
+    background-color: #333;
 }
 
 nav ul li {
@@ -51,10 +57,15 @@ nav ul li {
     margin-right: 5px;
 }
 
-nav a {
+nav ul li a {
     text-decoration: none;
     color: #fff;
 }
+
+nav ul li a:hover {
+    background-color: #797979;
+  }
+
 
 footer {
     text-align: center;
@@ -74,6 +85,14 @@ footer {
     border-radius: 10px;
 }
 
+
+
+
+/*Start Of Boxes*/
+
+
+
+
 .bento-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -90,6 +109,7 @@ footer {
 
 .box-item {
     background-color: rgb(93, 93, 93);
+    box-shadow: 5px 5px 5px #333;
     color: #eaeaea;
     padding: 10px;
     display: flex;
@@ -116,7 +136,8 @@ footer {
     }
 
     .box-item a {
-        color: #494949;
+        color: #d4e817;
+        text-decoration: none;
     }
 
     .box-item--single{
